<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/tv_mp3_hello"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_mp3_hello" />
    
    <TextView
        android:id="@+id/tv_mp3_1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tv_mp3_1"/>
    <LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >
	    <Button
	        android:id="@+id/btn_mp3_play"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/btn_mp3_play"/>
	    
	    <Button
	        android:id="@+id/btn_mp3_pause"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/btn_mp3_pause"/>
    </LinearLayout>
    
    <LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >
	    <Button
	        android:id="@+id/btn_mp3_pre"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/btn_mp3_pre"/>
	    
	    <Button
	        android:id="@+id/btn_mp3_next"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/btn_mp3_next"/>
    </LinearLayout>
    
    <LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >
	    <Button
	        android:id="@+id/btn_mp3_volume_up"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/btn_mp3_volume_up"/>
	    
	    <Button
	        android:id="@+id/btn_mp3_volume_down"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/btn_mp3_volume_down"/>
    </LinearLayout>
    
    <LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >
	    <Button
	        android:id="@+id/btn_mp3_volume_open"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/btn_mp3_volume_open"/>
	    
	    <Button
	        android:id="@+id/btn_mp3_volume_close"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/btn_mp3_volume_close"/>
    </LinearLayout>
    
    <LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >
	    <Button
	        android:id="@+id/btn_mp3_mode"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/btn_mp3_mode"/>
	    <Button
	        android:id="@+id/btn_mp3_fm"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/btn_mp3_fm"/>
	    <Button
	        android:id="@+id/btn_mp3_back"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/btn_mp3_back"/>
    </LinearLayout>

</LinearLayout>