<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/tv_alarm_hello"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_alarm_hello" />
    
    <TextView
        android:id="@+id/tv_alarm_1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tv_alarm_1"/>
    <LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >
	    <Button
	        android:id="@+id/btn_alarm_on"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/btn_alarm_on"/>
	    
	    <Button
	        android:id="@+id/btn_alarm_off"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/btn_alarm_off"/>
    </LinearLayout>
    
    <LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >
	    <Button
	        android:id="@+id/btn_alarm_beep_1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/btn_alarm_beep_1"/>
	    <Button
	        android:id="@+id/btn_alarm_beep_2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/btn_alarm_beep_2"/>
	    <Button
	        android:id="@+id/btn_alarm_beep_3"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/btn_alarm_beep_3"/>
    </LinearLayout>
    
    <LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >
	    <Button
	        android:id="@+id/btn_alarm_beep_4"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/btn_alarm_beep_4"/>
	    <Button
	        android:id="@+id/btn_alarm_beep_5"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/btn_alarm_beep_5"/>
    </LinearLayout>
    

</LinearLayout>