<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/tv_photosensor_hello"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_photosensor_hello" />
    
    <TextView
        android:id="@+id/tv_photosensor_1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tv_photosensor_1"/>
    <LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >
	    <Button
	        android:id="@+id/btn_photosensor_get"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/btn_photosensor_get"/>
    </LinearLayout>
    
    <LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >
	    <TextView
        android:id="@+id/tv_photosensor_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_photosensor_value"/>
	    <Button
	        android:id="@+id/btn_photosensor_value"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:hint="@string/btn_photosensor_value_hint"/>
    </LinearLayout>
    
    <LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >
	    <TextView
        android:id="@+id/tv_photosensor_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_photosensor_level"/>
	    <Button
	        android:id="@+id/btn_photosensor_level"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:hint="@string/btn_photosensor_level_hint"/>
    </LinearLayout>
    

</LinearLayout>