<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/tv_water_heater_hello"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_water_heater_hello" />
    
    <TextView
        android:id="@+id/tv_water_heater"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tv_water_heater"/>
    <LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >
	    <Button
	        android:id="@+id/btn_water_heater_open"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/btn_water_heater_open"/>
	    
	    <Button
	        android:id="@+id/btn_water_heater_close"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/btn_water_heater_close"/>
    </LinearLayout>
    
</LinearLayout>